--- a/ansible/templates/initscript.j2
+++ b/ansible/templates/initscript.j2
@@ -1,12 +1,12 @@
 #! /bin/sh
 ### BEGIN INIT INFO
-# Provides:          nextproject
+# Provides:          api
 # Required-Start:    $remote_fs $syslog
 # Required-Stop:     $remote_fs $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
-# Short-Description: nextproject init script
-# Description:       Init script to run nextproject's ruby api as a service.
+# Short-Description: api service
+# Description:       Init script to run api.rb as a service.
 ### END INIT INFO
 
 # Author: Chris Barrett <chris@cebarrett.net>
@@ -16,7 +16,7 @@ PATH=/sbin:/usr/sbin:/bin:/usr/bin
 NAME=api
 DESC="$NAME service"
 DAEMON=/opt/$NAME/$NAME.rb
-DAEMON_ARGS="--options args"
+DAEMON_ARGS="-e production"
 PIDFILE=/opt/$NAME/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
 
@@ -43,9 +43,9 @@ do_start()
 	#   0 if daemon has been started
 	#   1 if daemon was already running
 	#   2 if daemon could not be started
-	start-stop-daemon --start --quiet --pidfile $PIDFILE --exec $DAEMON --test > /dev/null \
+	start-stop-daemon --start --quiet --pidfile $PIDFILE --exec $DAEMON --background --test > /dev/null \
 		|| return 1
-	start-stop-daemon --start --quiet --pidfile $PIDFILE --exec $DAEMON -- \
+	start-stop-daemon --start --quiet --pidfile $PIDFILE --exec $DAEMON --background -- \
 		$DAEMON_ARGS \
 		|| return 2
 	# Add code here, if necessary, that waits for the process to be ready
