--- a/ansible/templates/nginx.conf.j2
+++ b/ansible/templates/nginx.conf.j2
@@ -11,6 +11,14 @@ http {
     server {
         listen 80;
         root /var/www;
+
+        location /api {
+            proxy_pass http://localhost:4567/;
+        }
+
+        location / {
+            root /var/www;
+        }
     }
     
     sendfile on;
